fixing spacing

--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,9 @@ p {
   font-size: 20px;
 }
 .content {
-  display: block;
   margin-left: 300px;
   margin-right: auto;
+  float:left; /* add this */
 }
 
 h1 {
